[FIX]- overflow with details card and backdrop bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   overflow-x:hidden!important;
+  padding: 0 0 20px 0;
 }
 
 .registerpage{
